--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 80vh;
@@ -21,6 +21,6 @@ body {
   border: 1px solid rgb(202, 202, 202);
 }
 
-.generate-button {
+.clear {
   margin: 20px;
 }
